when column was no longer a dbpk, the columninfo would still keep it as a pk column(case 414147: DB column modification causes import issue) Case: 414147